fixed views css issue, views-content aligns properly.

--- a/style/style.css
+++ b/style/style.css
@@ -203,3 +203,5 @@
 
 body {line-height: 18px;}
 
+.view-content {margin-top: 0.5em;}
+.view-content img{margin-bottom: 0.5em;} 
